--- a/settings.json
+++ b/settings.json
@@ -1,10 +1,9 @@
 {
     "spreadsheet_id": "1oiLRvnAbHnDDRBgkdR3e9mPnlANSWUEx37Aqe1iFk0c",
     "api_key": "AIzaSyA6CmM-SaYp62aGm9TpvZwbTvJ7siLIUhY",
-    "moving_average_interval": 2,
+    "moving_average_interval": 3,
     "uncounted": "N/A",
-    "work_range": {"start_col": "B", "start_row": "2",
+    "work_range": {"start_col": "B", "start_row": 2,
                    "end_col": "I", "end_row": ""},
-    "header_row": 0,
-    "update_range": "J2:J14"
+    "header_row": 1
 }
